--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -350,13 +350,12 @@
     span {
       font-size: 16px;
       font-weight: 700;
-      display: inline-block;
       font-family: $body-font;
       color: $secondary-color;
       margin-bottom: 0;
       margin-right: 30px;
       text-transform: uppercase;
-      margin-top: 8px;
+      margin-top: 2px;
       float: left;
     }
     .post-tag-list {
